Fix headshot overflow on small viewports

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -79,7 +79,7 @@ nav {
   }
 
   .headshot {
-    height: 75px;
+    height: 60px;
   }
 
   .hamburger {
